Alteração na prática 9 e Adicionando Prática 10
