# praticas/pratica09/swagger.yaml
@@ -1,22 +1,23 @@
-openapi: "3.0.0"
+openapi: 3.0.0
 info:
-  title: "API Produtos"
-  description: "API para gerenciar produtos"
-  version: "1.0.0"
+  title: API de Produtos
+  description: Documentação da API de Produtos com Express e Swagger
+  version: 1.0.0
 servers:
-  - url: "http://localhost:3000"
-    description: "Ambiente de desenvolvimento"
+  - url: http://localhost:8000
+    description: Ambiente de desenvolvimento
 tags:
-  - name: "produtos"
+  - name: produtos
+    description: Operações relacionadas aos produtos
 paths:
   /produtos:
     get:
       tags:
         - produtos
-      summary: "Listar produtos"
+      summary: Lista todos os produtos
       responses:
         "200":
-          description: "Uma lista de produtos"
+          description: Uma lista de produtos
           content:
             application/json:
               schema:
@@ -24,9 +25,9 @@ paths:
     post:
       tags:
         - produtos
-      summary: "Criar produto"
+      summary: Cria um novo produto
       requestBody:
-        description: "Um JSON com dados do novo produto"
+        description: Um JSON com dados do novo produto
         required: true
         content:
           application/json:
@@ -34,47 +35,49 @@ paths:
               $ref: "#/components/schemas/Produto"
       responses:
         "201":
-          description: "Produto criado com sucesso"
+          description: Produto criado com sucesso
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Produto"
         "422":
-          description: "Nome e preço são obrigatórios"
+          description: Nome e preço são obrigatórios
+
   /produtos/{produtoId}:
     get:
       tags:
         - produtos
-      summary: "Buscar produto por id"
+      summary: Busca um produto pelo ID
       parameters:
-        - name: produtoId
-          in: path
-          description: "Id do produto a ser buscado"
-          required: true
+        - in: path
+          name: produtoId
           schema:
-            type: string
+            type: integer
+          required: true
+          description: Id do produto a ser buscado
       responses:
         "200":
-          description: "Um JSON com os dados do produto encontrado"
+          description: Um JSON com os dados do produto encontrado
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Produto"
         "404":
-          description: "Produto não encontrado"
+          description: Produto não encontrado
+
     put:
       tags:
         - produtos
-      summary: "Atualizar produto por id"
+      summary: Atualiza um produto pelo ID
       parameters:
-        - name: produtoId
-          in: path
-          description: "Id do produto a ser buscado"
-          required: true
+        - in: path
+          name: produtoId
           schema:
-            type: string
+            type: integer
+          required: true
+          description: Id do produto a ser atualizado
       requestBody:
-        description: "Um JSON com dados do produto a atualizar"
+        description: Um JSON com dados do produto a atualizar
         required: true
         content:
           application/json:
@@ -82,31 +85,33 @@ paths:
               $ref: "#/components/schemas/Produto"
       responses:
         "200":
-          description: "Um JSON com os dados do produto atualizado"
+          description: Um JSON com os dados do produto atualizado
           content:
             application/json:
               schema:
                 $ref: "#/components/schemas/Produto"
         "404":
-          description: "Produto não encontrado"
+          description: Produto não encontrado
         "422":
-          description: "Nome e preço são obrigatórios"
+          description: Nome e preço são obrigatórios
+
     delete:
       tags:
         - produtos
-      summary: "Remover produto por id"
+      summary: Remove um produto pelo ID
       parameters:
-        - name: produtoId
-          in: path
-          description: "Id do produto a ser buscado"
-          required: true
+        - in: path
+          name: produtoId
           schema:
-            type: string
+            type: integer
+          required: true
+          description: Id do produto a ser removido
       responses:
         "204":
-          description: "Produto removido com sucesso"
+          description: Produto removido com sucesso
         "404":
-          description: "Produto não encontrado"
+          description: Produto não encontrado
+
 components:
   schemas:
     ArrayOfProdutos:
